# Help the Developers and yourself. Just use the C locale and settings
# for the compilation. They can still be overridden by make LANG=<whatever>
# but that is general a not very good idea
include $(top_builddir)/version.mk

LANG = C
LC_ALL = C

libdir = $(abs_top_srcdir)/lib

AM_CPPFLAGS = -D_POSIX_C_SOURCE=200112L -D_XOPEN_SOURCE=600 -D_BSD_SOURCE -D_DEFAULT_SOURCE
AM_CPPFLAGS += -DTEST -I"$(libdir)" -I"$(abs_top_builddir)/lib"

EXTRA_DIST =
EXTRA_DIST += $(dt_tests)
EXTRA_DIST += $(batch_tests)
EXTRA_DIST += $(built_dist_sources)
TESTS = $(bin_tests) $(dt_tests) $(batch_tests)
TESTS_ENVIRONMENT =
TEST_EXTENSIONS =
BUILT_SOURCES = $(built_dist_sources) $(built_nodist_sources)
built_dist_sources =
built_nodist_sources =
dt_tests =
bin_tests =
batch_tests =
check_PROGRAMS =
CLEANFILES = $(check_PROGRAMS)
DISTCLEANFILES = $(built_nodist_sources)
SUFFIXES =

DT_LIBS = $(top_builddir)/lib/libdut.a

## our friendly helper
include clitosis.am
AM_CTST_LOG_FLAGS = -v --builddir "$(top_builddir)/src" --timeout 300 --keep-going

TESTS_ENVIRONMENT += GPERF=$(GPERF)
TESTS_ENVIRONMENT += GDATE=$(GDATE)
TESTS_ENVIRONMENT += have_gdate="$(have_gdate)"

dt_tests += dseq.01.ctst
dt_tests += dseq.02.ctst
dt_tests += dseq.03.ctst
dt_tests += dseq.04.ctst
dt_tests += dseq.05.ctst
dt_tests += dseq.06.ctst
dt_tests += dseq.07.ctst
dt_tests += dseq.08.ctst
dt_tests += dseq.09.ctst
dt_tests += dseq.10.ctst
dt_tests += dseq.11.ctst
dt_tests += dseq.12.ctst
dt_tests += dseq.13.ctst
dt_tests += dseq.14.ctst
dt_tests += dseq.15.ctst
dt_tests += dseq.16.ctst
dt_tests += dseq.17.ctst
dt_tests += dseq.18.ctst
dt_tests += dseq.19.ctst
dt_tests += dseq.20.ctst
dt_tests += dseq.21.ctst
dt_tests += dseq.22.ctst
dt_tests += dseq.23.ctst
dt_tests += dseq.24.ctst
dt_tests += dseq.25.ctst
dt_tests += dseq.26.ctst
dt_tests += dseq.27.ctst
dt_tests += dseq.28.ctst
dt_tests += dseq.29.ctst
dt_tests += dseq.30.ctst
dt_tests += dseq.31.ctst
dt_tests += dseq.32.ctst
dt_tests += dseq.33.ctst
dt_tests += dseq.34.ctst
dt_tests += dseq.35.ctst
dt_tests += dseq.36.ctst
dt_tests += dseq.37.ctst
dt_tests += dseq.38.ctst
dt_tests += dseq.39.ctst
dt_tests += dseq.40.ctst
dt_tests += dseq.41.ctst
dt_tests += dseq.42.ctst
dt_tests += dseq.43.ctst
dt_tests += dseq.44.ctst
dt_tests += dseq.45.ctst
dt_tests += dseq.46.ctst
dt_tests += dseq.47.ctst
dt_tests += dseq.48.ctst
dt_tests += dseq.49.ctst
dt_tests += dseq.50.ctst
dt_tests += dseq.51.ctst
dt_tests += dseq.52.ctst
dt_tests += dseq.53.ctst
dt_tests += dseq.54.ctst
dt_tests += dseq.55.ctst
dt_tests += dseq.56.ctst
dt_tests += dseq.57.ctst
dt_tests += dseq.58.ctst
dt_tests += dseq.59.ctst
dt_tests += dseq.60.ctst
dt_tests += dseq.61.ctst
dt_tests += dseq.62.ctst
dt_tests += dseq.63.ctst
dt_tests += dseq.64.ctst
dt_tests += dseq.65.ctst
dt_tests += dseq.66.ctst
dt_tests += dseq.67.ctst

dt_tests += dconv.001.ctst
dt_tests += dconv.002.ctst
dt_tests += dconv.003.ctst
dt_tests += dconv.004.ctst
dt_tests += dconv.005.ctst
dt_tests += dconv.006.ctst
dt_tests += dconv.007.ctst
dt_tests += dconv.008.ctst
dt_tests += dconv.009.ctst
dt_tests += dconv.010.ctst
dt_tests += dconv.011.ctst
dt_tests += dconv.012.ctst
dt_tests += dconv.013.ctst
dt_tests += dconv.014.ctst
dt_tests += dconv.015.ctst
dt_tests += dconv.016.ctst
dt_tests += dconv.017.ctst
dt_tests += dconv.018.ctst
dt_tests += dconv.019.ctst
dt_tests += dconv.020.ctst
dt_tests += dconv.021.ctst
dt_tests += dconv.022.ctst
dt_tests += dconv.023.ctst
dt_tests += dconv.024.ctst
dt_tests += dconv.025.ctst
dt_tests += dconv.026.ctst
dt_tests += dconv.027.ctst
dt_tests += dconv.028.ctst
dt_tests += dconv.029.ctst
dt_tests += dconv.030.ctst
dt_tests += dconv.031.ctst
dt_tests += dconv.032.ctst
dt_tests += dconv.033.ctst
dt_tests += dconv.034.ctst
dt_tests += dconv.035.ctst
dt_tests += dconv.036.ctst
dt_tests += dconv.037.ctst
dt_tests += dconv.038.ctst
dt_tests += dconv.039.ctst
dt_tests += dconv.040.ctst
dt_tests += dconv.041.ctst
dt_tests += dconv.042.ctst
dt_tests += dconv.043.ctst
dt_tests += dconv.044.ctst
dt_tests += dconv.045.ctst
dt_tests += dconv.046.ctst
dt_tests += dconv.047.ctst
dt_tests += dconv.048.ctst
dt_tests += dconv.049.ctst
dt_tests += dconv.050.ctst
dt_tests += dconv.051.ctst
dt_tests += dconv.052.ctst
dt_tests += dconv.053.ctst
dt_tests += dconv.054.ctst
dt_tests += dconv.055.ctst
dt_tests += dconv.056.ctst
dt_tests += dconv.057.ctst
dt_tests += dconv.058.ctst
dt_tests += dconv.059.ctst
dt_tests += dconv.060.ctst
dt_tests += dconv.061.ctst
dt_tests += dconv.062.ctst
dt_tests += dconv.063.ctst
dt_tests += dconv.064.ctst
dt_tests += dconv.065.ctst
dt_tests += dconv.066.ctst
dt_tests += dconv.067.ctst
dt_tests += dconv.068.ctst
dt_tests += dconv.069.ctst
dt_tests += dconv.070.ctst
dt_tests += dconv.071.ctst
dt_tests += dconv.072.ctst
dt_tests += dconv.073.ctst
dt_tests += dconv.074.ctst
dt_tests += dconv.075.ctst
dt_tests += dconv.076.ctst
dt_tests += dconv.077.ctst
dt_tests += dconv.078.ctst
dt_tests += dconv.079.ctst
dt_tests += dconv.080.ctst
dt_tests += dconv.081.ctst
dt_tests += dconv.082.ctst
dt_tests += dconv.083.ctst
dt_tests += dconv.084.ctst
dt_tests += dconv.085.ctst
dt_tests += dconv.086.ctst
dt_tests += dconv.087.ctst
dt_tests += dconv.088.ctst
dt_tests += dconv.089.ctst
dt_tests += dconv.090.ctst
dt_tests += dconv.091.ctst
dt_tests += dconv.092.ctst
dt_tests += dconv.093.ctst
dt_tests += dconv.094.ctst
dt_tests += dconv.095.ctst
dt_tests += dconv.096.ctst
dt_tests += dconv.097.ctst
dt_tests += dconv.098.ctst
dt_tests += dconv.099.ctst
dt_tests += dconv.100.ctst
dt_tests += dconv.101.ctst
dt_tests += dconv.102.ctst
dt_tests += dconv.103.ctst
dt_tests += dconv.104.ctst
dt_tests += dconv.105.ctst
dt_tests += dconv.106.ctst
dt_tests += dconv.107.ctst
dt_tests += dconv.108.ctst
dt_tests += dconv.109.ctst
dt_tests += dconv.110.ctst
dt_tests += dconv.111.ctst
dt_tests += dconv.112.ctst
dt_tests += dconv.113.ctst
dt_tests += dconv.114.ctst
dt_tests += dconv.115.ctst
dt_tests += dconv.116.ctst
dt_tests += dconv.117.ctst
dt_tests += dconv.118.ctst
dt_tests += dconv.119.ctst
dt_tests += dconv.120.ctst
dt_tests += dconv.121.ctst
dt_tests += dconv.122.ctst
dt_tests += dconv.123.ctst
dt_tests += dconv.124.ctst
dt_tests += dconv.125.ctst
dt_tests += dconv.126.ctst
dt_tests += dconv.127.ctst
dt_tests += dconv.128.ctst
dt_tests += dconv.129.ctst
dt_tests += dconv.130.ctst
dt_tests += dconv.131.ctst
dt_tests += dconv.132.ctst
dt_tests += dconv.133.ctst
dt_tests += dconv.134.ctst
dt_tests += dconv.135.ctst
dt_tests += dconv.136.ctst
dt_tests += dconv.137.ctst
dt_tests += dconv.138.ctst
dt_tests += dconv.139.ctst
dt_tests += dconv.140.ctst
dt_tests += dconv.141.ctst
dt_tests += dconv.142.ctst
dt_tests += dconv.143.ctst

dt_tests += dadd.001.ctst
dt_tests += dadd.002.ctst
dt_tests += dadd.003.ctst
dt_tests += dadd.004.ctst
dt_tests += dadd.005.ctst
dt_tests += dadd.006.ctst
dt_tests += dadd.007.ctst
dt_tests += dadd.008.ctst
dt_tests += dadd.009.ctst
dt_tests += dadd.010.ctst
dt_tests += dadd.011.ctst
dt_tests += dadd.012.ctst
dt_tests += dadd.013.ctst
dt_tests += dadd.014.ctst
dt_tests += dadd.015.ctst
dt_tests += dadd.016.ctst
dt_tests += dadd.017.ctst
dt_tests += dadd.018.ctst
dt_tests += dadd.019.ctst
dt_tests += dadd.020.ctst
dt_tests += dadd.021.ctst
dt_tests += dadd.022.ctst
dt_tests += dadd.023.ctst
dt_tests += dadd.024.ctst
dt_tests += dadd.025.ctst
dt_tests += dadd.026.ctst
dt_tests += dadd.027.ctst
dt_tests += dadd.028.ctst
dt_tests += dadd.029.ctst
dt_tests += dadd.030.ctst
dt_tests += dadd.031.ctst
dt_tests += dadd.032.ctst
dt_tests += dadd.033.ctst
dt_tests += dadd.034.ctst
dt_tests += dadd.035.ctst
dt_tests += dadd.036.ctst
dt_tests += dadd.037.ctst
dt_tests += dadd.038.ctst
dt_tests += dadd.039.ctst
dt_tests += dadd.040.ctst
dt_tests += dadd.041.ctst
dt_tests += dadd.042.ctst
dt_tests += dadd.043.ctst
dt_tests += dadd.044.ctst
dt_tests += dadd.045.ctst
dt_tests += dadd.046.ctst
dt_tests += dadd.047.ctst
dt_tests += dadd.048.ctst
dt_tests += dadd.049.ctst
dt_tests += dadd.050.ctst
dt_tests += dadd.051.ctst
dt_tests += dadd.052.ctst
dt_tests += dadd.053.ctst
dt_tests += dadd.054.ctst
dt_tests += dadd.055.ctst
dt_tests += dadd.056.ctst
dt_tests += dadd.057.ctst
dt_tests += dadd.058.ctst
dt_tests += dadd.059.ctst
dt_tests += dadd.060.ctst
dt_tests += dadd.061.ctst
dt_tests += dadd.062.ctst
dt_tests += dadd.063.ctst
dt_tests += dadd.064.ctst
dt_tests += dadd.065.ctst
dt_tests += dadd.066.ctst
dt_tests += dadd.067.ctst
dt_tests += dadd.068.ctst
dt_tests += dadd.069.ctst
dt_tests += dadd.070.ctst
dt_tests += dadd.071.ctst
dt_tests += dadd.072.ctst
dt_tests += dadd.073.ctst
dt_tests += dadd.074.ctst
dt_tests += dadd.075.ctst
dt_tests += dadd.076.ctst
dt_tests += dadd.077.ctst
dt_tests += dadd.078.ctst
dt_tests += dadd.079.ctst
dt_tests += dadd.080.ctst
dt_tests += dadd.081.ctst
dt_tests += dadd.082.ctst
dt_tests += dadd.083.ctst
dt_tests += dadd.084.ctst
dt_tests += dadd.085.ctst
dt_tests += dadd.086.ctst
dt_tests += dadd.087.ctst
dt_tests += dadd.088.ctst
dt_tests += dadd.089.ctst
dt_tests += dadd.090.ctst
EXTRA_DIST += dadd.090.dat
dt_tests += dadd.091.ctst
dt_tests += dadd.092.ctst
dt_tests += dadd.093.ctst
dt_tests += dadd.094.ctst
dt_tests += dadd.095.ctst
dt_tests += dadd.096.ctst
dt_tests += dadd.097.ctst
dt_tests += dadd.098.ctst
dt_tests += dadd.099.ctst
dt_tests += dadd.100.ctst
dt_tests += dadd.101.ctst
dt_tests += dadd.102.ctst
dt_tests += dadd.103.ctst

dt_tests += dtest.001.ctst
dt_tests += dtest.002.ctst
dt_tests += dtest.003.ctst
dt_tests += dtest.004.ctst
dt_tests += dtest.005.ctst
dt_tests += dtest.006.ctst
dt_tests += dtest.007.ctst
dt_tests += dtest.008.ctst
dt_tests += dtest.009.ctst
dt_tests += dtest.010.ctst
dt_tests += dtest.011.ctst
dt_tests += dtest.012.ctst

dt_tests += ddiff.001.ctst
dt_tests += ddiff.002.ctst
dt_tests += ddiff.003.ctst
dt_tests += ddiff.004.ctst
dt_tests += ddiff.005.ctst
dt_tests += ddiff.006.ctst
dt_tests += ddiff.007.ctst
dt_tests += ddiff.008.ctst
dt_tests += ddiff.009.ctst
dt_tests += ddiff.010.ctst
dt_tests += ddiff.011.ctst
dt_tests += ddiff.012.ctst
dt_tests += ddiff.013.ctst
dt_tests += ddiff.014.ctst
dt_tests += ddiff.015.ctst
dt_tests += ddiff.016.ctst
dt_tests += ddiff.017.ctst
dt_tests += ddiff.018.ctst
dt_tests += ddiff.019.ctst
dt_tests += ddiff.020.ctst
dt_tests += ddiff.021.ctst
dt_tests += ddiff.022.ctst
dt_tests += ddiff.023.ctst
dt_tests += ddiff.024.ctst
dt_tests += ddiff.025.ctst
dt_tests += ddiff.026.ctst
dt_tests += ddiff.027.ctst
dt_tests += ddiff.028.ctst
dt_tests += ddiff.029.ctst
dt_tests += ddiff.030.ctst
dt_tests += ddiff.031.ctst
dt_tests += ddiff.032.ctst
dt_tests += ddiff.033.ctst
dt_tests += ddiff.034.ctst
dt_tests += ddiff.035.ctst
dt_tests += ddiff.036.ctst
dt_tests += ddiff.037.ctst
dt_tests += ddiff.038.ctst
dt_tests += ddiff.039.ctst
dt_tests += ddiff.040.ctst
dt_tests += ddiff.041.ctst
dt_tests += ddiff.042.ctst
dt_tests += ddiff.043.ctst
dt_tests += ddiff.044.ctst
dt_tests += ddiff.045.ctst
dt_tests += ddiff.046.ctst
dt_tests += ddiff.047.ctst
dt_tests += ddiff.048.ctst
dt_tests += ddiff.049.ctst
dt_tests += ddiff.050.ctst
dt_tests += ddiff.051.ctst
dt_tests += ddiff.052.ctst
dt_tests += ddiff.053.ctst
dt_tests += ddiff.054.ctst
dt_tests += ddiff.055.ctst
dt_tests += ddiff.056.ctst
dt_tests += ddiff.057.ctst
dt_tests += ddiff.058.ctst
dt_tests += ddiff.059.ctst
dt_tests += ddiff.060.ctst
dt_tests += ddiff.061.ctst
dt_tests += ddiff.062.ctst
dt_tests += ddiff.063.ctst
dt_tests += ddiff.064.ctst
dt_tests += ddiff.065.ctst
dt_tests += ddiff.066.ctst
dt_tests += ddiff.067.ctst
dt_tests += ddiff.068.ctst
dt_tests += ddiff.069.ctst
dt_tests += ddiff.070.ctst
dt_tests += ddiff.071.ctst
dt_tests += ddiff.072.ctst
EXTRA_DIST += some-dates-and-other-stuff.csv

dt_tests += dgrep.001.ctst
dt_tests += dgrep.002.ctst
dt_tests += dgrep.003.ctst
dt_tests += dgrep.004.ctst
dt_tests += dgrep.005.ctst
dt_tests += dgrep.006.ctst
dt_tests += dgrep.007.ctst
dt_tests += dgrep.008.ctst
dt_tests += dgrep.009.ctst
dt_tests += dgrep.010.ctst
dt_tests += dgrep.011.ctst
dt_tests += dgrep.012.ctst
dt_tests += dgrep.013.ctst
dt_tests += dgrep.014.ctst
dt_tests += dgrep.015.ctst
dt_tests += dgrep.016.ctst
dt_tests += dgrep.017.ctst
dt_tests += dgrep.018.ctst
dt_tests += dgrep.019.ctst
dt_tests += dgrep.020.ctst
dt_tests += dgrep.021.ctst
dt_tests += dgrep.022.ctst
dt_tests += dgrep.023.ctst
dt_tests += dgrep.024.ctst
dt_tests += dgrep.025.ctst
dt_tests += dgrep.026.ctst
dt_tests += dgrep.027.ctst
dt_tests += dgrep.028.ctst
dt_tests += dgrep.029.ctst
dt_tests += dgrep.030.ctst
dt_tests += dgrep.031.ctst
dt_tests += dgrep.032.ctst
dt_tests += dgrep.033.ctst
dt_tests += dgrep.034.ctst
dt_tests += dgrep.035.ctst
dt_tests += dgrep.036.ctst
dt_tests += dgrep.037.ctst
dt_tests += dgrep.038.ctst
dt_tests += dgrep.039.ctst
dt_tests += dgrep.040.ctst
dt_tests += dgrep.041.ctst
dt_tests += dgrep.042.ctst
dt_tests += dgrep.043.ctst

dt_tests += dround.001.ctst
dt_tests += dround.002.ctst
dt_tests += dround.003.ctst
dt_tests += dround.004.ctst
dt_tests += dround.005.ctst
dt_tests += dround.006.ctst
dt_tests += dround.007.ctst
dt_tests += dround.008.ctst
dt_tests += dround.009.ctst
dt_tests += dround.010.ctst
dt_tests += dround.011.ctst
dt_tests += dround.012.ctst
dt_tests += dround.013.ctst
dt_tests += dround.014.ctst
dt_tests += dround.015.ctst
dt_tests += dround.016.ctst
dt_tests += dround.017.ctst
dt_tests += dround.018.ctst
dt_tests += dround.019.ctst
dt_tests += dround.020.ctst
dt_tests += dround.021.ctst
dt_tests += dround.022.ctst
dt_tests += dround.023.ctst
dt_tests += dround.024.ctst
dt_tests += dround.025.ctst
dt_tests += dround.026.ctst
dt_tests += dround.027.ctst
dt_tests += dround.028.ctst
dt_tests += dround.029.ctst
dt_tests += dround.030.ctst
dt_tests += dround.031.ctst
dt_tests += dround.032.ctst
dt_tests += dround.033.ctst
dt_tests += dround.034.ctst
dt_tests += dround.035.ctst
dt_tests += dround.036.ctst
dt_tests += dround.037.ctst

dt_tests += tseq.01.ctst
dt_tests += tseq.02.ctst
dt_tests += tseq.03.ctst
dt_tests += tseq.04.ctst
dt_tests += tseq.05.ctst
dt_tests += tseq.06.ctst
dt_tests += tseq.07.ctst
dt_tests += tseq.08.ctst
dt_tests += tseq.09.ctst
dt_tests += tseq.10.ctst
dt_tests += tseq.11.ctst
dt_tests += tseq.12.ctst
dt_tests += tseq.13.ctst
dt_tests += tseq.14.ctst
dt_tests += tseq.15.ctst
dt_tests += tseq.16.ctst
dt_tests += tseq.17.ctst
dt_tests += tseq.18.ctst
dt_tests += tseq.19.ctst

dt_tests += tdiff.001.ctst
dt_tests += tdiff.002.ctst
dt_tests += tdiff.003.ctst
dt_tests += tdiff.004.ctst
dt_tests += tdiff.005.ctst
dt_tests += tdiff.006.ctst
dt_tests += tdiff.007.ctst
dt_tests += tdiff.008.ctst
dt_tests += tdiff.009.ctst
dt_tests += tdiff.010.ctst
dt_tests += tdiff.011.ctst
dt_tests += tdiff.012.ctst
dt_tests += tdiff.013.ctst
dt_tests += tdiff.014.ctst

dt_tests += tadd.001.ctst
dt_tests += tadd.002.ctst
dt_tests += tadd.003.ctst
dt_tests += tadd.004.ctst
dt_tests += tadd.005.ctst
dt_tests += tadd.006.ctst
dt_tests += tadd.007.ctst
dt_tests += tadd.008.ctst
dt_tests += tadd.009.ctst
dt_tests += tadd.010.ctst
dt_tests += tadd.011.ctst

dt_tests += tgrep.001.ctst
dt_tests += tgrep.002.ctst
dt_tests += tgrep.003.ctst

dt_tests += ttest.001.ctst
dt_tests += ttest.002.ctst
dt_tests += ttest.003.ctst
dt_tests += ttest.004.ctst
dt_tests += ttest.005.ctst
dt_tests += ttest.006.ctst
dt_tests += ttest.007.ctst

dt_tests += tconv.001.ctst
dt_tests += tconv.002.ctst
dt_tests += tconv.003.ctst
dt_tests += tconv.004.ctst
dt_tests += tconv.005.ctst
dt_tests += tconv.006.ctst
dt_tests += tconv.007.ctst
dt_tests += tconv.008.ctst
dt_tests += tconv.009.ctst
dt_tests += tconv.010.ctst
dt_tests += tconv.011.ctst
dt_tests += tconv.012.ctst
dt_tests += tconv.013.ctst
dt_tests += tconv.014.ctst

dt_tests += tround.001.ctst
dt_tests += tround.002.ctst
dt_tests += tround.003.ctst
dt_tests += tround.004.ctst
dt_tests += tround.005.ctst
dt_tests += tround.006.ctst


dt_tests += dtconv.001.ctst
dt_tests += dtconv.002.ctst
dt_tests += dtconv.003.ctst
dt_tests += dtconv.004.ctst
dt_tests += dtconv.005.ctst
dt_tests += dtconv.006.ctst
dt_tests += dtconv.007.ctst
dt_tests += dtconv.008.ctst
dt_tests += dtconv.009.ctst
dt_tests += dtconv.010.ctst
dt_tests += dtconv.011.ctst
dt_tests += dtconv.012.ctst
dt_tests += dtconv.013.ctst
dt_tests += dtconv.014.ctst
dt_tests += dtconv.015.ctst
dt_tests += dtconv.016.ctst
dt_tests += dtconv.017.ctst
dt_tests += dtconv.018.ctst
dt_tests += dtconv.019.ctst
dt_tests += dtconv.020.ctst
dt_tests += dtconv.021.ctst
dt_tests += dtconv.022.ctst
dt_tests += dtconv.023.ctst
if ZONEINFO_UTC_RIGHT
dt_tests += dtconv.024.ctst
dt_tests += dtconv.025.ctst
dt_tests += dtconv.026.ctst
dt_tests += dtconv.027.ctst
dt_tests += dtconv.028.ctst
dt_tests += dtconv.029.ctst
dt_tests += dtconv.030.ctst
dt_tests += dtconv.031.ctst
dt_tests += dtconv.032.ctst
dt_tests += dtconv.033.ctst
endif  ZONEINFO_UTC_RIGHT
dt_tests += dtconv.034.ctst
dt_tests += dtconv.035.ctst
dt_tests += dtconv.036.ctst
dt_tests += dtconv.037.ctst
dt_tests += dtconv.038.ctst
dt_tests += dtconv.039.ctst
dt_tests += dtconv.040.ctst
dt_tests += dtconv.041.ctst
dt_tests += dtconv.042.ctst
dt_tests += dtconv.043.ctst
dt_tests += dtconv.044.ctst
dt_tests += dtconv.045.ctst
dt_tests += dtconv.046.ctst
dt_tests += dtconv.047.ctst
dt_tests += dtconv.048.ctst
dt_tests += dtconv.049.ctst
dt_tests += dtconv.050.ctst
dt_tests += dtconv.051.ctst
dt_tests += dtconv.052.ctst
dt_tests += dtconv.053.ctst
dt_tests += dtconv.054.ctst
dt_tests += dtconv.055.ctst
dt_tests += dtconv.056.ctst
dt_tests += dtconv.057.ctst
dt_tests += dtconv.058.ctst
dt_tests += dtconv.059.ctst
dt_tests += dtconv.060.ctst
dt_tests += dtconv.061.ctst
dt_tests += dtconv.062.ctst
dt_tests += dtconv.063.ctst
dt_tests += dtconv.064.ctst
dt_tests += dtconv.065.ctst
dt_tests += dtconv.066.ctst
dt_tests += dtconv.067.ctst
dt_tests += dtconv.068.ctst
dt_tests += dtconv.069.ctst
dt_tests += dtconv.070.ctst
dt_tests += dtconv.071.ctst
dt_tests += dtconv.072.ctst

dt_tests += convt.ymcw-ymd.ctst
dt_tests += convt.ymcw-ywd.ctst
dt_tests += convt.ymcw-yd.ctst
dt_tests += convt.ymd-ymcw.ctst
dt_tests += convt.ymd-ywd.ctst
dt_tests += convt.ymd-yd.ctst
dt_tests += convt.ywd-ymcw.ctst
dt_tests += convt.ywd-ymd.ctst
dt_tests += convt.ywd-yd.ctst
dt_tests += convt.yd-ymcw.ctst
dt_tests += convt.yd-ymd.ctst
dt_tests += convt.yd-ywd.ctst

dt_tests += add.ymcw-1d.ctst
dt_tests += add.ymd-1d.ctst
dt_tests += add.ywd-1d.ctst
dt_tests += add.yd-1d.ctst
dt_tests += add.ymcw-1w.ctst
dt_tests += add.ymd-1w.ctst
dt_tests += add.ywd-1w.ctst
dt_tests += add.yd-1w.ctst
dt_tests += add.ymcw-1y.ctst
dt_tests += add.ymd-1y.ctst
dt_tests += add.ywd-1y.ctst
dt_tests += add.yd-1y.ctst

dt_tests += dtseq.01.ctst
dt_tests += dtseq.02.ctst
dt_tests += dtseq.03.ctst
dt_tests += dtseq.04.ctst
dt_tests += dtseq.05.ctst
dt_tests += dtseq.06.ctst
dt_tests += dtseq.07.ctst
dt_tests += dtseq.08.ctst
dt_tests += dtseq.09.ctst
dt_tests += dtseq.10.ctst
dt_tests += dtseq.11.ctst
dt_tests += dtseq.12.ctst

dt_tests += dtadd.001.ctst
dt_tests += dtadd.002.ctst
dt_tests += dtadd.003.ctst
dt_tests += dtadd.004.ctst
dt_tests += dtadd.005.ctst
dt_tests += dtadd.006.ctst
dt_tests += dtadd.007.ctst
dt_tests += dtadd.008.ctst
dt_tests += dtadd.009.ctst
dt_tests += dtadd.010.ctst
dt_tests += dtadd.011.ctst
dt_tests += dtadd.012.ctst
dt_tests += dtadd.013.ctst
dt_tests += dtadd.014.ctst
dt_tests += dtadd.015.ctst
dt_tests += dtadd.016.ctst
dt_tests += dtadd.017.ctst
dt_tests += dtadd.018.ctst
dt_tests += dtadd.019.ctst
dt_tests += dtadd.020.ctst
dt_tests += dtadd.021.ctst
dt_tests += dtadd.022.ctst
dt_tests += dtadd.023.ctst
dt_tests += dtadd.024.ctst
dt_tests += dtadd.025.ctst
dt_tests += dtadd.026.ctst
dt_tests += dtadd.027.ctst
dt_tests += dtadd.028.ctst
dt_tests += dtadd.029.ctst
if WITH_LEAP_SECONDS
dt_tests += dtadd.030.ctst
dt_tests += dtadd.031.ctst
endif  ## WITH_LEAP_SECONDS
dt_tests += dtadd.032.ctst
dt_tests += dtadd.033.ctst
if WITH_LEAP_SECONDS
dt_tests += dtadd.034.ctst
dt_tests += dtadd.035.ctst
endif  ## WITH_LEAP_SECONDS
dt_tests += dtadd.036.ctst
dt_tests += dtadd.037.ctst
dt_tests += dtadd.038.ctst
dt_tests += dtadd.039.ctst
dt_tests += dtadd.040.ctst
## multi-sed
dt_tests += dtadd.041.ctst
dt_tests += dtadd.042.ctst
dt_tests += dtadd.043.ctst
dt_tests += dtadd.044.ctst
dt_tests += dtadd.045.ctst
dt_tests += dtadd.046.ctst
dt_tests += dtadd.047.ctst
dt_tests += dtadd.048.ctst
dt_tests += dtadd.049.ctst
dt_tests += dtadd.050.ctst
dt_tests += dtadd.051.ctst
dt_tests += dtadd.052.ctst
dt_tests += dtadd.053.ctst
dt_tests += dtadd.054.ctst
dt_tests += dtadd.055.ctst

dt_tests += dtgrep.001.ctst
dt_tests += dtgrep.002.ctst
dt_tests += dtgrep.003.ctst
dt_tests += dtgrep.004.ctst
dt_tests += dtgrep.005.ctst
dt_tests += dtgrep.006.ctst
dt_tests += dtgrep.007.ctst
dt_tests += dtgrep.008.ctst
dt_tests += dtgrep.009.ctst
dt_tests += dtgrep.010.ctst
dt_tests += dtgrep.011.ctst
dt_tests += dtgrep.012.ctst
dt_tests += dtgrep.013.ctst
dt_tests += dtgrep.014.ctst

dt_tests += dttest.001.ctst
dt_tests += dttest.002.ctst
dt_tests += dttest.003.ctst
dt_tests += dttest.004.ctst
dt_tests += dttest.005.ctst
dt_tests += dttest.006.ctst
dt_tests += dttest.007.ctst
dt_tests += dttest.008.ctst
dt_tests += dttest.009.ctst
dt_tests += dttest.010.ctst

dt_tests += dtdiff.001.ctst
dt_tests += dtdiff.002.ctst
dt_tests += dtdiff.003.ctst
dt_tests += dtdiff.004.ctst
dt_tests += dtdiff.005.ctst
dt_tests += dtdiff.006.ctst
dt_tests += dtdiff.007.ctst
dt_tests += dtdiff.008.ctst
dt_tests += dtdiff.009.ctst
dt_tests += dtdiff.010.ctst
dt_tests += dtdiff.011.ctst
dt_tests += dtdiff.012.ctst
dt_tests += dtdiff.013.ctst
dt_tests += dtdiff.014.ctst
dt_tests += dtdiff.015.ctst
dt_tests += dtdiff.016.ctst
dt_tests += dtdiff.017.ctst
dt_tests += dtdiff.018.ctst
if WITH_LEAP_SECONDS
dt_tests += dtdiff.019.ctst
dt_tests += dtdiff.020.ctst
dt_tests += dtdiff.021.ctst
dt_tests += dtdiff.022.ctst
endif  ## WITH_LEAP_SECONDS
dt_tests += dtdiff.023.ctst
dt_tests += dtdiff.024.ctst
dt_tests += dtdiff.025.ctst
dt_tests += dtdiff.026.ctst
dt_tests += dtdiff.027.ctst
dt_tests += dtdiff.028.ctst
dt_tests += dtdiff.029.ctst
dt_tests += dtdiff.030.ctst
dt_tests += dtdiff.031.ctst
dt_tests += dtdiff.032.ctst
dt_tests += dtdiff.033.ctst
dt_tests += dtdiff.034.ctst
dt_tests += dtdiff.035.ctst
dt_tests += dtdiff.036.ctst
dt_tests += dtdiff.037.ctst
dt_tests += dtdiff.038.ctst
dt_tests += dtdiff.039.ctst
dt_tests += dtdiff.040.ctst
dt_tests += dtdiff.041.ctst
dt_tests += dtdiff.042.ctst
dt_tests += dtdiff.043.ctst
dt_tests += dtdiff.044.ctst
dt_tests += dtdiff.045.ctst
dt_tests += dtdiff.046.ctst
dt_tests += dtdiff.047.ctst
dt_tests += dtdiff.048.ctst
dt_tests += dtdiff.049.ctst
dt_tests += dtdiff.050.ctst
dt_tests += dtdiff.051.ctst
dt_tests += dtdiff.052.ctst
dt_tests += dtdiff.053.ctst
dt_tests += dtdiff.054.ctst

dt_tests += dtround.001.ctst
dt_tests += dtround.002.ctst
dt_tests += dtround.003.ctst
dt_tests += dtround.004.ctst
dt_tests += dtround.005.ctst
dt_tests += dtround.006.ctst
dt_tests += dtround.007.ctst
dt_tests += dtround.008.ctst
dt_tests += dtround.009.ctst
dt_tests += dtround.010.ctst
dt_tests += dtround.011.ctst
dt_tests += dtround.012.ctst
dt_tests += dtround.013.ctst
dt_tests += dtround.014.ctst
dt_tests += dtround.015.ctst
dt_tests += dtround.016.ctst
dt_tests += dtround.017.ctst
dt_tests += dtround.018.ctst
dt_tests += dtround.019.ctst
dt_tests += dtround.020.ctst
dt_tests += dtround.021.ctst
dt_tests += dtround.022.ctst

dt_tests += dzone.001.ctst
dt_tests += dzone.002.ctst
dt_tests += dzone.003.ctst
dt_tests += dzone.004.ctst
dt_tests += dzone.005.ctst
dt_tests += dzone.006.ctst
dt_tests += dzone.007.ctst
dt_tests += dzone.008.ctst
dt_tests += dzone.009.ctst
dt_tests += dzone.010.ctst
dt_tests += dzone.011.ctst
dt_tests += dzone.012.ctst
dt_tests += dzone.013.ctst
dt_tests += dzone.014.ctst

dt_tests += dsort.001.ctst
dt_tests += dsort.002.ctst
dt_tests += dsort.003.ctst
dt_tests += dsort.004.ctst
dt_tests += dsort.005.ctst
dt_tests += dsort.006.ctst
dt_tests += dsort.007.ctst
EXTRA_DIST += caev_01.txt
EXTRA_DIST += caev_02.txt

dt_tests += strptime.001.ctst
dt_tests += strptime.002.ctst
dt_tests += strptime.003.ctst

## testing the prchunker
dt_tests += prchunk.001.ctst
dt_tests += prchunk.002.ctst
dt_tests += prchunk.003.ctst
dt_tests += prchunk.004.ctst
dt_tests += prchunk.005.ctst
dt_tests += prchunk.006.ctst

## testing tzmaps, regardless if the official ones are here or not
EXTRA_DIST += dummy.tzmap
built_nodist_sources += dummy.tzmcc
TESTS_ENVIRONMENT += TZMAP_DIR=$(builddir)
TESTS_ENVIRONMENT += LOCALE_FILE=$(top_srcdir)/data/locale
dt_tests += tzmap.001.ctst
dt_tests += tzmap.002.ctst
dt_tests += tzmap.003.ctst
dt_tests += tzmap.004.ctst

## make sure our the maps we ship are clean
dt_tests += tzmap_check_01.ctst
dt_tests += tzmap_check_02.ctst
TESTS_ENVIRONMENT += TZMAP=$(top_builddir)/lib/tzmap

## military midnight
dt_tests += mil-midnight.001.ctst
dt_tests += mil-midnight.002.ctst
dt_tests += mil-midnight.003.ctst
dt_tests += mil-midnight.004.ctst
dt_tests += mil-midnight.005.ctst
dt_tests += mil-midnight.006.ctst
dt_tests += mil-midnight.007.ctst
dt_tests += mil-midnight.008.ctst
dt_tests += mil-midnight.009.ctst
dt_tests += mil-midnight.010.ctst

## we should check if the zones in these tests actually exist
## also failing tests here should be soft-fails because that could
## easily be an outdated zoneinfo file
dt_tests += dtz.001.ctst
dt_tests += dtz.002.ctst

check_PROGRAMS += struct-1
check_PROGRAMS += struct-2
check_PROGRAMS += struct-3
check_PROGRAMS += struct-4
check_PROGRAMS += struct-5
check_PROGRAMS += struct-6
check_PROGRAMS += struct-7
check_PROGRAMS += struct-8
check_PROGRAMS += struct-9
check_PROGRAMS += enum-1
check_PROGRAMS += dtcore-strp
check_PROGRAMS += dtcore-conv
check_PROGRAMS += dtcore-add
check_PROGRAMS += time-core-add
check_PROGRAMS += basic_ymd_get_wday
check_PROGRAMS += basic_get_jan01_wday
check_PROGRAMS += basic_md_get_yday
check_PROGRAMS += basic_get_dom_wday
check_PROGRAMS += strtoi-bench
check_PROGRAMS += strtoi-1
check_PROGRAMS += itostr-1
check_PROGRAMS += itostr-2
check_PROGRAMS += itostr-3
check_PROGRAMS += itostr-4

bin_tests += struct-1
bin_tests += struct-2
bin_tests += struct-3
bin_tests += struct-4
bin_tests += struct-5
bin_tests += struct-6
bin_tests += struct-7
bin_tests += struct-8
bin_tests += struct-9
bin_tests += enum-1
bin_tests += dtcore-strp
bin_tests += dtcore-conv
bin_tests += dtcore-add
bin_tests += time-core-add
bin_tests += basic_ymd_get_wday
bin_tests += basic_get_jan01_wday
bin_tests += basic_get_dom_wday
bin_tests += basic_md_get_yday

dtcore_strp_LDADD = $(DT_LIBS)
dtcore_conv_LDADD = $(DT_LIBS)
dtcore_add_LDADD = $(DT_LIBS)
time_core_add_LDADD = $(DT_LIBS)

dt_tests += strtoi.001.ctst
dt_tests += itostr.001.ctst
dt_tests += itostr.002.ctst
dt_tests += itostr.003.ctst
dt_tests += itostr.004.ctst

## batch checks
batch_tests += dseq-cnt.1.sh
if HAVE_GDATE
TESTS_ENVIRONMENT += have_gdate_2039="$(have_gdate_2039)"
batch_tests += dseq-cnt.2.sh
batch_tests += dseq-cnt.3.sh
batch_tests += dconv-batch.1.sh
batch_tests += dconv-batch.2.sh
endif  HAVE_GDATE


## tzmcc rule
SUFFIXES += .tzmap
SUFFIXES += .tzmcc
.tzmap.tzmcc:
	-$(AM_V_GEN) $(top_builddir)/lib/tzmap cc -o $@ $<

clean-local:
	-rm -rf *.tmpd

## Makefile.am ends here
